--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ https://templatemo.com/tm-541-host-cloud
 
 -->
 <script src="https://cdn.websitepolicies.io/lib/cookieconsent/1.0.3/cookieconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcc.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#f6f6f6","text":"#000000","border":"#555555"},"button":{"background":"#555555","text":"#ffffff"}},"position":"bottom","content":{"href":"https://hyciti.com/Privacy-policy.html"}})});</script>
+  <script data-ad-client="ca-pub-5938404074749292" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
